tests/escript/scripts/escript_invalid_errors_within_functions.py.out
Hello, Escript!
The result is: 8
Error in script: At line 16, line 13 in main, line 8 in buggy_function, ZeroDivisionError: division by zero
